--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ th {
 h1 {color: rgb(35, 5, 83);
     font-size: 20px;
     font-family: Helvetica;
+    text-align: center;
 }
-h2, h3, h4 {color: rgb(94, 12, 202);
+h2, h3, h4, {color: rgb(94, 12, 202);
     font-size: 16px;
     font-family: Helvetica;
 }
@@ -20,3 +21,11 @@ p, figcaption {
     font-size: 12px;
     font-family: Helvetica;
 }
+footer {color: rgb(255, 255, 255);
+    font-size: 12px;
+    font-family: Helvetica;
+    text-align: center;
+    background-color: blue;
+}
+
+
